--- a/interview_pieces/db_data/flights/flights.yaml
+++ b/interview_pieces/db_data/flights/flights.yaml
@@ -16,7 +16,7 @@ tables:
       - name: id
         type: SERIAL
         options: PRIMARY KEY
-      - name: flight_number
+      - name: number
         type: VARCHAR(8)
       - name: airline_id
         type: INTEGER
